# cute-final

./: .gitignore  README.md  agent.py  pyproject.toml  requirements.txt  test.py
agent/: __init__.py
agent/cli/: __init__.py  main.py
agent/config/: __init__.py  defaults.py  loader.py  models.py
agent/images/: __init__.py  loader.py  pnm.py
agent/llm/: client.py  retry.py  vision.py
agent/output/: __init__.py  processor.py
agent/prompts/: __init__.py  system.py  templates.py
agent/runtime/: __init__.py  agent.py  compaction.py  executor.py  loop.py  session.py
agent/tools/: __init__.py  analyze_image.py  extract_video.py  finish.py  grep_files.py  media_extra.py  process.py  registry.py  shell.py  specs.py  web_search.py
agent/utils/: __init__.py  files.py
docs/: chutes-integration.md  configuration.md  context-management.md
rules/: 06-llm-usage-guide.md
src/: __init__.py  main.py  risk_eval.py
src/config/: defaults.py  models.py
src/core/: __init__.py  agent.py  compaction.py  executor.py  loop.py
src/images/: loader.py  pnm.py
src/llm/: __init__.py  client.py  vision.py
src/output/: events.py  jsonl.py
src/prompts/: system.py  templates.py
src/tools/: __init__.py  analyze_image.py  extract_video.py  finish.py  fs.py  media_extra.py  process.py  registry.py  search_text.py  specs.py  view_image.py  web_search.py
src/tools/hashline/: __init__.py  core.py  tool.py
src/utils/: truncate.py
