[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superagent"
version = "1.0.0"
description = "Autonomous coding agent for Term Challenge (SDK 3.0 compatible)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
superagent = "agent.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
namespaces = false
